Update logo to Advanced Language Model Lab PNG and rename lab

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,8 +206,12 @@ li {
 }
 
 .logo img {
-    height: 40px;
+    height: 45px;
     width: auto;
+}
+
+.logo span {
+    display: none;
 }
 
 .nav-menu {
